app/assets/stylesheets/feedbacks.scss
// Place all the styles related to the feedbacks controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.card.activity-feedback-container {
  margin-top:30px;
  .card-body {
    padding: 0px;
  }
}

.rating {
  color: $gray-500;
  &.rating1 {
    color: $brand-danger;
  }
  &.rating2 {
    color: $orange;
  }
  &.rating3 {
    color: $yellow;
  }
  &.rating4 {
    color: $cyan;
  }
  &.rating5 {
    color: $brand-success;
  }
}

.provide-activity-feedback-app {

  .rating-label {
    height: 2rem;
    display: inline-block;
  }

  textarea {
    width: 100%;
    min-height: 120px;
  }

  a.rating {
    transition: all 0.2s ease-in-out;
    font-size: 2rem;

    &:hover {
      text-decoration: none;
      transform: scale(1.4);
    }
  }
}

.activity-feedback-app {

  .avatar {
    width: 60px;
    border-radius: 50%;
    margin-right: 1rem;
    align-self: flex-start;
    display: flex;
  }

  .content {
    flex: 1;
    word-break: break-all;
  }

  .btn-toolbar {
    padding: 20px 20px 10px 20px;
    background-color: rgba(0, 0, 0, 0.05);
  }

  .list-group-item {
    display: flex;
    align-items: flex-start;
    border-left: 0;
    border-right: 0;
  }

  i.rating {
    margin-right: 2px;
  }

  // img.larry-rating {
  //   width: 17px;
  //   margin-right: 2px;
  // }

}

#feedback_notes {
  width: 350px;
  height: 100px;
}

.raty-editor {
  display: inline;
}

.hint {
  display: inline;
  padding-left: 15px;
}

.feedbacks-avatar {
  width: 60px;
  height: 60px;
  float: left;
  margin-right: 8px;
  border-radius: 5px;
  border: 2px solid #34495e;
}

ul.social-icons {
  margin: 5px 0px 5px 0px;
  position: relative;
  left: -2px;
  top: -2px;

  li {
    padding-right: 0px;
    padding-left: 0px;
  }
}

.feedbacks-reason {
  display:table-row;
}

.feedbacks-table {
  table-layout: fixed;
  width: 100%;
}

.hidden-notes-field {
  display: none;
}

.table-feedbacks {
  font-size: 15px;
}

th .current {
  padding-right: 12px;
  background-repeat: no-repeat;
  background-position: right center;
}
th .asc {
  background-image: url(up_arrow.gif);
}

th .desc {
  background-image: url(down_arrow.gif);
}

.teacher_feedbacks_section {
  border-bottom: 1px solid black;
  clear: both;
  .col-md-2 {
    margin-bottom: 5px;
  }
}
.teacher-feedback-list {
  margin: auto;
  width: 95%;
}

.feedback-rating-column {
  width: 185px;
}
.admin-curriculum-feedback-date-column, .admin-curriculum-feedback-student-column {
  width: 145px;
}
.admin-teacher-stat {
  text-align: center;
}
.admin-teacher-stat-heading {
  font-size: 14px;
}
.admin-teacher-stats-row {
  float: left;
  display: block;
  margin-top: 15px;
}
.in-place-edit-text-area {
  font-size: 12px;
}
.feedback-stars {
  font-size: calc(24px + .5vw);
  line-height: calc(12px + .5vw);
  cursor: default;
  .red {
    display: inline;
    color: #e74c3c;
  }
  .orange {
    display: inline;
    color: #fd7e14;
  }
  .yellow {
    display: inline;
    color: #ffc107;
  }
  .blue {
    display: inline;
    color: #17a2b8;
  }
  .green {
    display: inline;
    color: #2ecc71;
  }
}

